Listagem de cards

--- a/index.html
+++ b/index.html
@@ -24,17 +24,121 @@
             </div>
         </nav>
     </header>
+
     <main>
         <section id="dsmovie-card-list" class="container">
 
-            <div class="dsmovie-card">
-                <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/shNgvVeBerQFUJNOV7ScN7zRznp.jpg" alt="The Witcher">
-                <div class="dsmovie-card-description">
-                    <h3>The Witcher</h3>
-                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+            <div class="row">
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/34jGvMonJyHihSe1Ix1QFhulVqF.jpg"alt="The Witcher">
+                        <div class="dsmovie-card-description">
+                            <h3>The Witcher</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w250_and_h141_face/mX3WOJPBzzl4kj4xU5lL7qfD6C3.jpg"alt="Batman">
+                        <div class="dsmovie-card-description">
+                            <h3>Batman</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/eNI7PtK6DEYgZmHWP9gQNuff8pv.jpg"alt="Matrix Resurrections">
+                        <div class="dsmovie-card-description">
+                            <h3>Matrix Resurrections</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/tutaKitJJIaqZPyMz7rxrhb4Yxm.jpg"alt="Sing 2r">
+                        <div class="dsmovie-card-description">
+                            <h3>Singer</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/kQM7o3NIkruIZLoQ9E2XzZQ8Ujl.jpg"alt="Um Looop Eterno">
+                        <div class="dsmovie-card-description">
+                            <h3>Um Looop Eterno</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/EnDlndEvw6Ptpp8HIwmRcSSNKQ.jpg"alt="Goshtbusters: Mais Além">
+                        <div class="dsmovie-card-description">
+                            <h3>Goshtbusters: Mais Além</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/3G1Q5xF40HkUBJXxt2DQgQzKTp5.jpg"alt="Encanto">
+                        <div class="dsmovie-card-description">
+                            <h3>Encanto</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/opM1iONReaoQSn0soOgCtDOGdnA.jpg"alt="Amor, Sublime Amor">
+                        <div class="dsmovie-card-description">
+                            <h3>Amor, Sublime Amor</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/uslmOwQpdRRUwr6AmBP6JdzeHjS.jpg"alt="Drive">
+                        <div class="dsmovie-card-description">
+                            <h3>Drive</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/6zfLk86Hu5qjLiRs1Y7cGl1DtRm.jpg"alt="Código de Conduta">
+                        <div class="dsmovie-card-description">
+                            <h3>Código de Conduta</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/dKJM7ASnbe2owv92S4OwtqBG8wl.jpg"alt="Detenção">
+                        <div class="dsmovie-card-description">
+                            <h3>Detenção</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/oVv5l6L5Wi5j3gd4P2vt0YvVMOg.jpg"alt="Fresh">
+                        <div class="dsmovie-card-description">
+                            <h3>Fresh</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
                 </div>
             </div>
-
         </section>
 
     </main>
